--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
     "react": "17.0.2",
     "react-bootstrap": "2.0.2",
     "react-dom": "17.0.2",
-    "react-router": "^6.0.1",
+    "react-router": "6.0.1",
     "react-router-dom": "6.0.1"
   },
   "scripts": {
